Fix archive and pause decks
